@@ -157,12 +157,12 @@ public class CreeperBeams extends DungeonPuzzle {
         allLines.sort(Comparator.comparingDouble(ObjectDoublePair::rightDouble));
 
         while (result.size() < 5 && !allLines.isEmpty()) {
-            Beam solution = allLines.get(0).left();
+            Beam solution = allLines.getFirst().left();
             result.add(solution);
 
             // remove the line we just added and other lines that use blocks we're using for
             // that line
-            allLines.remove(0);
+            allLines.removeFirst();
             allLines.removeIf(beam -> solution.containsComponentOf(beam.left()));
         }
 
